--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue/cli-service": "^5.0.8",
+    "axios": "^1.8.2",
+    "dotenv": "^16.4.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.13",
+    "@types/node": "^22.13.10",
     "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
